--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Grand+Hotel&family=Montserrat:ital@0;1&display=swap');
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -5,9 +6,80 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  font-family: 'Montserrat', sans-serif !important;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.navbar{
+  background-color: black !important;
+}
+.nav-link{
+  color:white !important;
+}
+.navbar-brand{
+  color:white !important;
+}
+.navbar-nav{
+  margin-left:auto !important;
+}
+.smallimg{
+  height:200px;
+  width:100% !important;
+  border-radius: 5px !important;
+}
+h1{
+  font-size: 20px !important;
+}
+.btn{
+  background-color: black !important;
+  color:white !important;
+  box-shadow: none !important;
+}
+
+/* bs-->box shadow */
+.bs{
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+  margin-top: 20px !important;
+  border-radius: 5px !important;
+  padding: 20px !important;
+}
+.bigimg{
+  height:400px;
+  border-radius: 5px;
+  width:100%;
+}
+input,select,.ant-picker{
+  box-shadow:none !important;
+  margin-top:10px;
+  border:1px solid black !important;
+  width:100% !important;
+  border-radius: 3px;
+  height:35px;
+}
+h2{
+  font-size:30px;
+  padding:10px;
+  font-weight:bold;
+  text-align:center;
+}
+.dropdown-toggle{
+  border:0px solid black !important;
+}
+.ant-picker-input input{
+  border:none !important;
+}
+
+.landing{
+  background: black;
+  height:100vh;
+  margin-left: 0 !important;
+  margin-right: 0 !important;
+}
+.landing .col-md-9{
+  border-right: 8px solid white;;
+}
+
